--- a/_posts/2019-11-14-HTTPS工作流程.md
+++ b/_posts/2019-11-14-HTTPS工作流程.md
@@ -56,7 +56,7 @@ tags:
 
 为了确认 CA 的公钥是否正确，就需要用给 CA 签名的 CA 的公钥解密，这样层层下去，直到 root CA，全球皆知的几个著名大 CA
 
-非对称加密在性能上是不如对称加密的，所以可以两者结合，非对称加密主要用于传递秘钥、对称加密用于数据通信。
+非对称加密在性能上是不如对称加密的，所以可以两者结合，非对称加密主要用于传递秘钥或者生产秘钥的随机数、对称加密用于数据通信。
 
 ### HTTPS 流程
 
