--- a/_posts/2019-11-14-HTTPS工作流程.md
+++ b/_posts/2019-11-14-HTTPS工作流程.md
@@ -62,7 +62,7 @@ tags:
 
 ![https](/img/https.jpg)
 
-当浏览器访问一个网站的时候，网站会给浏览器一个服务端的证书，浏览器肯定不会直接相信这个证书，而是先对证书进行校验，判断颁发证书的 CA 是不是自己信任的 CA，如果不是，就继续判断 CA 的 CA 是不是自己信任的，不断追溯，直到确认 CA 可信或者不可信。（系统或浏览器有自己的根证书库）
+当浏览器访问一个网站的时候，网站会给浏览器一个服务端的证书，浏览器肯定不会直接相信这个证书，而是先对证书进行校验，判断颁发证书的 CA 是不是自己信任的 CA，如果不是，就继续判断 CA 的 CA 是不是自己信任的，不断追溯，直到根证书，确认 CA 可信或者不可信。（系统或浏览器有自己的根证书库）
 
 ### 根证书与中间证书的区别
 
