--- a/_posts/2020-01-14-企业文化.md
+++ b/_posts/2020-01-14-企业文化.md
@@ -18,9 +18,22 @@ tags:
   - 节俭
   - 诚信
 - 苹果
-  - 超越利润之上的追求，创造伟大的产品。
+  - 超越利润之上的追求，动力十足地创造伟大的产品，其他一切都是第二位的。（能赚钱很棒，因为那样你才能够制造伟大的产品。但是动力来 自产品，而不是利润。斯卡利本末倒置，把赚钱当成了目标。这只是个微妙的差别，但其结果却会影响每一件事：你聘用谁，提拔谁，会议 上讨论什么事情。）
 - oppo vivo
   - 做对的事情，发现事情做错，立马停止。
   - 没有一家公司是因为营销做的不好而倒闭的，营销也重要，但是产品是第一位的
+- google
+  - 着眼于长远（当有风险的长期投资可能伤害短期利润时，谷歌选择为未来投资）
+  - 为用户服务（当广告客户利益和产品最终用户利益发生冲突时，谷歌以最终用户利益为先）
+  - 不作恶（当巨大的利润不符合价值观时，谷歌选择不作恶）
+  - 让世界变得更美好（谷歌一直挑战着“人类的上限”，让世界变得更美好）
+- Costco
+  - Costco 超市和别的所有零售商的差别就是他不以赚商品的差价为目的，而是致力于做客户的“生活管家”，为客户提供优质低价的商品和服 务，千方百计提高消费者剩余，甚至规定任何一件商品的毛利率不能超过 14%。我们观察别的零售商，则是尽可能地想办法从顾客口袋中多掏一分钱。Costco 这种不直接以赚钱为目的的商业模式，简直是其他零售商的噩梦
+- 微信
+  - 我们每个人都能感受到微信是与众不同的产品，他同样出自于张小龙利润之上的追求。2019 年 1 月的微信公开课，微信创始人张小龙谈到了微信的初心和原动力：“原动力其实应该是内心深处的一种认知和期望，它很强大，以至于可以坚持很久，克服很多困难去达到它。那么微信的原动力，可以总结为两点。第一，坚持做一个好的、与时俱进的工具。由于我对工具产品热爱，我甚至会亲自动手写代码来打造出一个 foxmail 这样的产品来满足自己的制造欲望。所以做一个优秀的工具，对我来说是值得痴迷的。微信的基础点，就是成为一个优秀的工具。第二个原动力是，让创造者体现价值。”“而我观察到的很多业界的产品经理,其实毕业后就会被自己所在的公司误导。因为公司的目的是要流量要变现，所以大家的 KPI 就是如何产生流量如何变现。一旦围绕这个目标，大家的工作目的已经不是做最好的产品，而是用一切手段去获取流量而已。”
+- 阿里巴巴
+  - 阿里巴巴是一家改变中国商业生态的伟大公司。我们如果找来马云的内部讲话，可以发现他几乎总是在向高管和员工反反复复地讲使命、愿景、价值观，几乎从来没有讲要赚多少钱。马云一开始的追求就是改变中国的商业文明，让天下没有难做的生意，为中小企业服务，帮助解决社会问题。他认为阿里几十年后的业务也许会面目全非，但如果使命感和价值观能传递下去，阿里就能活得很长久。即便如此，也不能说员工在执行中完全没有变形的地方。毫无疑问，如果一家巨大的企业完全以赚钱为目的，那将是很可怕的事情。
+- 海底捞
+  - 海底捞在管理上是一个另类。它在激励机制上，只考核“顾客满意度”和“员工努力程度”。门店利润、翻台率都只是结果而非目标。正因为如此，我们才能享受到极致性价比的服务和用餐体验。
 
 ### 什么是坏的企业文化
