优雅上下线

--- a/_posts/2020-04-15-利用pm2实现应用平滑重启.md
+++ b/_posts/2020-04-15-利用pm2实现应用平滑重启.md
@@ -93,14 +93,14 @@ process.send("ready");
 
 ### 其他知识点：Linux 信号
 
-1. 信号的名字和编号
+#### 信号的名字和编号
 
 每个信号都有一个名字和编号，这些名字都以“SIG”开头，例如“SIGIO ”、“SIGCHLD”等等。
 信号定义在 signal.h 头文件中，信号名都定义为正整数。
 具体的信号名称可以使用 kill -l 来查看信号的名字以及序号，信号是从 1 开始编号的，不存在 0 号信号。kill 对于信号 0 又特殊的应用
 
 
-2) 信号的处理：
+#### 信号的处理：
    信号的处理有三种方法，分别是：忽略、捕捉和默认动作
 
 忽略信号，大多数信号可以使用这个方式来处理，但是有两种信号不能被忽略（分别是 SIGKILL 和 SIGSTOP）。因为他们向内核和超级用户提供了进程终止和停止的可靠方法，如果忽略了，那么这个进程就变成了没人能管理的的进程，显然是内核设计者不希望看到的场景
