--- a/_posts/2019-11-12-TCP.md
+++ b/_posts/2019-11-12-TCP.md
@@ -18,4 +18,4 @@ B->A，A 收到 ACK，建立链接
 
 进行了短暂通信后，A、B 关闭了链接
 
-TCP 是有超时重发机制的，如果 A 给 B 发起链接的时候，SYN 包因为超时重发了好几次，在通信结束后，此时超时的包到达了 B，B 此时建立链接会不会有问题？
+TCP 是有超时重发机制的，如果 A 给 B 发起链接的时候，SYN 包因为超时重发了好几次，在通信结束后，此时超时的包到达了 B，那么B 此时建立链接会有问题。
